# git2prompt

./: .gitignore  .gptignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
src/: arg_parser.hpp  comment_scrub.cpp  comment_scrub.hpp  main.cpp  output_formatter.cpp  output_formatter.hpp  processor.cpp  processor.hpp  repo_scanner.cpp  repo_scanner.hpp  token_count.cpp  token_count.hpp
tests/: test_ignore.cpp  test_output.cpp  test_token.cpp
